# atom

./: .gitignore  README.md  docker-compose.integration.yml  exceptions.py  fix.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run_tests.py  tailwind.config.js  test_artifact_service.py
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py
api/middleware/: auth.py
api/routes/: adapters.py  audit.py  auth.py  compare.py  configs.py  contracts.py  coverage.py  expectations.py  gates.py  health.py  jobs.py  lineage.py  logs.py  notifications.py  profiles.py  runs.py  scheduler_reports.py  schedules.py  schema_snapshots.py  selections.py  settings.py  tokens.py
api/services/: __init__.py  adapter_service.py  artifact_service.py  artifact_views.py  audit_service.py  compare_service.py  contract_breach_checker.py  coverage_service.py  dbt_artifact_parser.py  diagnostics_service.py  difference_export.py  expectations_service.py  file_source.py  frame_engine.py  gate_service.py  junit_export.py  log_parser.py  mismatch_export.py  multi_file_remote.py  notifier.py  (+11 more)
docs/: auth.md  cli.md  multi_file_reconciliation.md
etl_framework/: exceptions.py
expectations/: README.md
frontend/: app-config.js  app-help.js  app.js  contract-examples.js  help-content.js  index.html  index.template.html  styles.css
scripts/: build-html.js  cleanup_tokens.py  manage_tokens.py  reset_admin_token.py
tests/: test_auth_middleware.py  test_settings_routes.py  test_token_model.py  test_token_repository.py  test_token_routes.py
(+356 files in other folders)
