[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "etl-framework"
version = "1.0.0"
description = "ETL and SAP BO testing framework"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "pyodbc>=4.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "tabulate>=0.9",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "beautifulsoup4>=4.12",
    "polars>=1.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
json-logging = ["python-json-logger>=2.0"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
tracing = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp>=1.20"]
metrics = ["prometheus_client>=0.17"]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-cov",
    "python-json-logger>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
